# ge-legacy

./: .gitmodules  CMakeLists.txt
cmake/: Ge.cmake  GeLibrary.cmake  GeMessages.cmake  GeProgram.cmake  GeProject.cmake  GeTargets.cmake
examples/: CMakeLists.txt
examples/01-geometry/: main.cpp
include/: ge.hpp
lib/: CMakeLists.txt
lib/client/: CMakeLists.txt  client.cpp  conversion.cpp  conversion.hpp  resources.cpp  scene.cpp  shapes.cpp  sprite.cpp
lib/client/include/ge/: client.hpp
lib/client/include/ge/client/: actor.hpp  client.hpp  color.hpp  keyboard.hpp  resources.hpp  scene.hpp  shapes.hpp  sprite.hpp
lib/error/: CMakeLists.txt
lib/error/include/ge/: error.hpp
lib/error/include/ge/error/: assert.hpp
lib/gef/: CMakeLists.txt  schema.fbs  storage.cpp  writer.cpp
lib/gef/include/: gef.hpp
lib/gef/include/gef/: storage.hpp  writer.hpp
lib/math/include/ge/math/: vector.hpp
lib/resources/: CMakeLists.txt  packer.cpp  resource_writer.cpp  resources.cpp  schema.fbs
lib/resources/include/ge/: resources.hpp
lib/resources/include/ge/resources/: ids.hpp  packer.hpp  resource_writer.hpp  resources.hpp
lib/str/: CMakeLists.txt
lib/str/include/ge/: str.hpp
lib/str/include/ge/str/: scanner.hpp
lib/thing/: CMakeLists.txt  entity_pool.cpp
lib/thing/examples/: CMakeLists.txt  basic.cpp
lib/thing/include/ge/: thing.hpp
lib/thing/include/ge/thing/: entity.hpp  entity_manager.hpp  entity_pool.hpp
lib/thing/tests/: CMakeLists.txt
lib/time/: CMakeLists.txt  frame-timer.cpp
lib/time/include/ge/time/: frame-timer.hpp
lib/tyke/: CMakeLists.txt  tyke.cpp
lib/tyke/include/ge/: tyke.hpp
lib/ui/: CMakeLists.txt
lib/util/: CMakeLists.txt  filemap.cpp  filemap_linux.cpp  paths.cpp  util.cpp
lib/util/include/ge/: util.hpp
lib/util/include/ge/util/: filemap.hpp  filemap_linux.hpp  key_value_storage.hpp  paths.hpp  property.hpp  registry.hpp  util.hpp
modules/: CMakeLists.txt
modules/error/include/ge/error/: assert.hpp
modules/geda/: CMakeLists.txt  schema.fbs  schema_generated.h
modules/geda/include/ge/: packer.hpp
modules/renderer/include/ge/: renderer.hpp
modules/time/: CMakeLists.txt  frame-timer.cpp  metronome.cpp
modules/time/include/ge/: time.hpp
modules/time/include/ge/time/: frame-timer.hpp  metronome.hpp
modules/ui/include/ge/ui/: layout.hpp  widget.hpp
modules/util/: CMakeLists.txt
src/: CMakeLists.txt
src/ui/: CMakeLists.txt
tools/: CMakeLists.txt
(+28 files in other folders)
